# nomad_airbnb

./: README.md  db.sqlite3  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_rename_created_category_created_at_and_more.py
common/: models.py
config/: asgi.py  authentication.py  routing.py  settings.py  urls.py
direct_msgs/: admin.py  apps.py  consumers.py  models.py  serilizers.py  views.py
direct_msgs/migrations/: 0001_initial.py  0002_alter_chatting_room_users_alter_message_room_and_more.py  0003_chatting_room_name.py  0004_alter_chatting_room_name.py  0005_alter_message_options_message_sequence_number_and_more.py  0006_chatting_room_last_activity.py  0007_remove_chatting_room_last_activity.py  0008_rename_user_message_sender.py  0009_message_is_read.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  (+3 more)
houses/: admin.py  models.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  filters.py  models.py  serializers.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: 1.json  admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  urls.py  views.py
(+29 files in other folders)
